yarn: start moving mapping classes into helpers namespace

--- a/doc/agile/v1/sprint_backlog_02.org
+++ b/doc/agile/v1/sprint_backlog_02.org
@@ -12,31 +12,32 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2017-07-09 Sun 15:10]
+#+CAPTION: Clock summary at [2017-07-09 Sun 15:36]
 | <75>                                                                        |         |       |      |       |
 | Headline                                                                    | Time    |       |      |     % |
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
-| *Total time*                                                                | *19:41* |       |      | 100.0 |
+| *Total time*                                                                | *20:06* |       |      | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
-| Stories                                                                     | 19:41   |       |      | 100.0 |
-| Active                                                                      |         | 19:41 |      | 100.0 |
-| STARTED Sprint and product backlog grooming                                 |         |       | 0:48 |   4.1 |
+| Stories                                                                     | 20:06   |       |      | 100.0 |
+| Active                                                                      |         | 20:06 |      | 100.0 |
+| STARTED Sprint and product backlog grooming                                 |         |       | 0:48 |   4.0 |
 | COMPLETED Edit release notes for previous sprint                            |         |       | 0:24 |   2.0 |
-| COMPLETED Implement the context class                                       |         |       | 1:12 |   6.1 |
-| COMPLETED Implement the exogenous transformation chain                      |         |       | 4:11 |  21.3 |
-| COMPLETED Implement the pre-processing chain                                |         |       | 1:35 |   8.0 |
+| COMPLETED Implement the context class                                       |         |       | 1:12 |   6.0 |
+| COMPLETED Implement the exogenous transformation chain                      |         |       | 4:11 |  20.8 |
+| COMPLETED Implement the pre-processing chain                                |         |       | 1:35 |   7.9 |
 | COMPLETED Refactor mapping repository factory                               |         |       | 0:12 |   1.0 |
 | COMPLETED Implement the output languages transform                          |         |       | 0:37 |   3.1 |
 | COMPLETED Use forward declaration for context                               |         |       | 0:20 |   1.7 |
-| COMPLETED Implement the references chain                                    |         |       | 2:43 |  13.8 |
-| COMPLETED Implement the merge transform                                     |         |       | 0:40 |   3.4 |
+| COMPLETED Implement the references chain                                    |         |       | 2:43 |  13.5 |
+| COMPLETED Implement the merge transform                                     |         |       | 0:40 |   3.3 |
 | COMPLETED Implement the model generation chain                              |         |       | 0:13 |   1.1 |
-| COMPLETED Implement the model assembly chain                                |         |       | 0:50 |   4.2 |
-| COMPLETED Implement the post-processing chain                               |         |       | 3:31 |  17.9 |
-| COMPLETED Move helpers from =transforms= namespace                          |         |       | 0:45 |   3.8 |
-| COMPLETED Replace expanders with transforms                                 |         |       | 0:03 |   0.3 |
-| COMPLETED Port all expander unit tests to transforms                        |         |       | 0:42 |   3.6 |
-| COMPLETED Remove all legacy classes from yarn                               |         |       | 0:55 |   4.7 |
+| COMPLETED Implement the model assembly chain                                |         |       | 0:50 |   4.1 |
+| COMPLETED Implement the post-processing chain                               |         |       | 3:31 |  17.5 |
+| COMPLETED Move helpers from =transforms= namespace                          |         |       | 0:45 |   3.7 |
+| COMPLETED Replace expanders with transforms                                 |         |       | 0:03 |   0.2 |
+| COMPLETED Port all expander unit tests to transforms                        |         |       | 0:42 |   3.5 |
+| COMPLETED Remove all legacy classes from yarn                               |         |       | 0:55 |   4.6 |
+| STARTED Move helpers from main namespace                                    |         |       | 0:25 |   2.1 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -316,15 +317,31 @@ Notes:
 
 - test tailor
 
-*** Move helpers from main namespace                                  :story:
+*** STARTED Move helpers from main namespace                          :story:
+    CLOCK: [2017-07-09 Sun 15:11]--[2017-07-09 Sun 15:36] =>  0:25
 
-Types such as name builder etc need to be moved to the helpers namespace.
+Types such as name builder etc need to be moved to the helpers
+namespace.
 
 *** Implement the mapper as a transform                               :story:
 
 We did a quick hack and reused the existing mapper. We need to move
 it, and all the associated classes (repository etc) into the
 transforms namespace and clean it up. Name: =map_transform=.
+
+*** Move all data types into its own namespace                        :story:
+
+Now we have placed all the transforms under namespace =transforms=,
+for symmetry purposes it would be nice to have some top-level
+namespace for the data types. Names:
+
+- entities
+- meta-model
+- ...
+
+If we cannot find any good names, we may need to leave these objects
+at the top-level. However, we should probably also place the code
+generator at the top-level as well.
 
 *** Implement the code-generation chain                               :story:
 
@@ -457,19 +474,5 @@ If we do implement customisable JSON serialisation, we should still
 use the raw format in streaming. We need a way to disable the cooked
 JSON internally. We should also re-implement streaming in terms of
 this JSON mode.
-
-*** Move all data types into its own namespace                        :story:
-
-Now we have placed all the transforms under namespace =transforms=,
-for symmetry purposes it would be nice to have some top-level
-namespace for the data types. Names:
-
-- entities
-- meta-model
-- ...
-
-If we cannot find any good names, we may need to leave these objects
-at the top-level. However, we should probably also place the code
-generator at the top-level as well.
 
 ** Deprecated
