--- a/doc/agile/v1/sprint_backlog_02.org
+++ b/doc/agile/v1/sprint_backlog_02.org
@@ -12,14 +12,14 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2017-07-09 Sun 15:39]
+#+CAPTION: Clock summary at [2017-07-09 Sun 15:41]
 | <75>                                                                        |         |       |      |       |
 | Headline                                                                    | Time    |       |      |     % |
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
-| *Total time*                                                                | *20:08* |       |      | 100.0 |
+| *Total time*                                                                | *20:09* |       |      | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
-| Stories                                                                     | 20:08   |       |      | 100.0 |
-| Active                                                                      |         | 20:08 |      | 100.0 |
+| Stories                                                                     | 20:09   |       |      | 100.0 |
+| Active                                                                      |         | 20:09 |      | 100.0 |
 | STARTED Sprint and product backlog grooming                                 |         |       | 0:48 |   4.0 |
 | COMPLETED Edit release notes for previous sprint                            |         |       | 0:24 |   2.0 |
 | COMPLETED Implement the context class                                       |         |       | 1:12 |   6.0 |
@@ -36,8 +36,8 @@
 | COMPLETED Move helpers from =transforms= namespace                          |         |       | 0:45 |   3.7 |
 | COMPLETED Replace expanders with transforms                                 |         |       | 0:03 |   0.2 |
 | COMPLETED Port all expander unit tests to transforms                        |         |       | 0:42 |   3.5 |
-| COMPLETED Remove all legacy classes from yarn                               |         |       | 0:55 |   4.6 |
-| STARTED Move helpers from main namespace                                    |         |       | 0:27 |   2.2 |
+| COMPLETED Remove all legacy classes from yarn                               |         |       | 0:55 |   4.5 |
+| STARTED Move helpers from main namespace                                    |         |       | 0:28 |   2.3 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -318,6 +318,7 @@ Notes:
 - test tailor
 
 *** STARTED Move helpers from main namespace                          :story:
+    CLOCK: [2017-07-09 Sun 15:40]--[2017-07-09 Sun 15:41] =>  0:01
     CLOCK: [2017-07-09 Sun 15:37]--[2017-07-09 Sun 15:39] =>  0:02
     CLOCK: [2017-07-09 Sun 15:11]--[2017-07-09 Sun 15:36] =>  0:25
 
