--- a/doc/agile/v1/sprint_backlog_02.org
+++ b/doc/agile/v1/sprint_backlog_02.org
@@ -12,14 +12,14 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2017-07-09 Sun 16:01]
+#+CAPTION: Clock summary at [2017-07-09 Sun 16:03]
 | <75>                                                                        |         |       |      |       |
 | Headline                                                                    | Time    |       |      |     % |
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
-| *Total time*                                                                | *20:26* |       |      | 100.0 |
+| *Total time*                                                                | *20:27* |       |      | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
-| Stories                                                                     | 20:26   |       |      | 100.0 |
-| Active                                                                      |         | 20:26 |      | 100.0 |
+| Stories                                                                     | 20:27   |       |      | 100.0 |
+| Active                                                                      |         | 20:27 |      | 100.0 |
 | STARTED Sprint and product backlog grooming                                 |         |       | 0:48 |   3.9 |
 | COMPLETED Edit release notes for previous sprint                            |         |       | 0:24 |   2.0 |
 | COMPLETED Implement the context class                                       |         |       | 1:12 |   5.9 |
@@ -37,7 +37,7 @@
 | COMPLETED Replace expanders with transforms                                 |         |       | 0:03 |   0.2 |
 | COMPLETED Port all expander unit tests to transforms                        |         |       | 0:42 |   3.4 |
 | COMPLETED Remove all legacy classes from yarn                               |         |       | 0:55 |   4.5 |
-| STARTED Implement the mapper as a transform                                 |         |       | 0:45 |   3.7 |
+| COMPLETED Implement the mapper as a transform                               |         |       | 0:46 |   3.7 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -317,7 +317,9 @@ Notes:
 
 - test tailor
 
-*** STARTED Implement the mapper as a transform                       :story:
+*** COMPLETED Implement the mapper as a transform                     :story:
+    CLOSED: [2017-07-09 Sun 16:02]
+    CLOCK: [2017-07-09 Sun 16:01]--[2017-07-09 Sun 16:02] =>  0:01
     CLOCK: [2017-07-09 Sun 15:46]--[2017-07-09 Sun 16:00] =>  0:14
     CLOCK: [2017-07-09 Sun 15:42]--[2017-07-09 Sun 15:45] =>  0:03
     CLOCK: [2017-07-09 Sun 15:40]--[2017-07-09 Sun 15:41] =>  0:01
