--- a/doc/agile/v1/sprint_backlog_02.org
+++ b/doc/agile/v1/sprint_backlog_02.org
@@ -12,32 +12,33 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2017-07-09 Sun 16:03]
+#+CAPTION: Clock summary at [2017-07-09 Sun 16:10]
 | <75>                                                                        |         |       |      |       |
 | Headline                                                                    | Time    |       |      |     % |
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
-| *Total time*                                                                | *20:27* |       |      | 100.0 |
+| *Total time*                                                                | *20:34* |       |      | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
-| Stories                                                                     | 20:27   |       |      | 100.0 |
-| Active                                                                      |         | 20:27 |      | 100.0 |
+| Stories                                                                     | 20:34   |       |      | 100.0 |
+| Active                                                                      |         | 20:34 |      | 100.0 |
 | STARTED Sprint and product backlog grooming                                 |         |       | 0:48 |   3.9 |
-| COMPLETED Edit release notes for previous sprint                            |         |       | 0:24 |   2.0 |
-| COMPLETED Implement the context class                                       |         |       | 1:12 |   5.9 |
-| COMPLETED Implement the exogenous transformation chain                      |         |       | 4:11 |  20.5 |
+| COMPLETED Edit release notes for previous sprint                            |         |       | 0:24 |   1.9 |
+| COMPLETED Implement the context class                                       |         |       | 1:12 |   5.8 |
+| COMPLETED Implement the exogenous transformation chain                      |         |       | 4:11 |  20.3 |
 | COMPLETED Implement the pre-processing chain                                |         |       | 1:35 |   7.7 |
 | COMPLETED Refactor mapping repository factory                               |         |       | 0:12 |   1.0 |
 | COMPLETED Implement the output languages transform                          |         |       | 0:37 |   3.0 |
 | COMPLETED Use forward declaration for context                               |         |       | 0:20 |   1.6 |
-| COMPLETED Implement the references chain                                    |         |       | 2:43 |  13.3 |
-| COMPLETED Implement the merge transform                                     |         |       | 0:40 |   3.3 |
+| COMPLETED Implement the references chain                                    |         |       | 2:43 |  13.2 |
+| COMPLETED Implement the merge transform                                     |         |       | 0:40 |   3.2 |
 | COMPLETED Implement the model generation chain                              |         |       | 0:13 |   1.1 |
 | COMPLETED Implement the model assembly chain                                |         |       | 0:50 |   4.1 |
-| COMPLETED Implement the post-processing chain                               |         |       | 3:31 |  17.2 |
-| COMPLETED Move helpers from =transforms= namespace                          |         |       | 0:45 |   3.7 |
+| COMPLETED Implement the post-processing chain                               |         |       | 3:31 |  17.1 |
+| COMPLETED Move helpers from =transforms= namespace                          |         |       | 0:45 |   3.6 |
 | COMPLETED Replace expanders with transforms                                 |         |       | 0:03 |   0.2 |
 | COMPLETED Port all expander unit tests to transforms                        |         |       | 0:42 |   3.4 |
 | COMPLETED Remove all legacy classes from yarn                               |         |       | 0:55 |   4.5 |
 | COMPLETED Implement the mapper as a transform                               |         |       | 0:46 |   3.7 |
+| STARTED Move helpers from main namespace                                    |         |       | 0:07 |   0.6 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -330,7 +331,8 @@ We did a quick hack and reused the existing mapper. We need to move
 it, and all the associated classes (repository etc) into the
 transforms namespace and clean it up. Name: =map_transform=.
 
-*** Move helpers from main namespace                                  :story:
+*** STARTED Move helpers from main namespace                          :story:
+    CLOCK: [2017-07-09 Sun 16:03]--[2017-07-09 Sun 16:10] =>  0:07
 
 Types such as name builder etc need to be moved to the helpers
 namespace.
