yarn: move more builders and parsers to helpers namespace

--- a/doc/agile/v1/sprint_backlog_02.org
+++ b/doc/agile/v1/sprint_backlog_02.org
@@ -12,33 +12,33 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2017-07-09 Sun 16:40]
+#+CAPTION: Clock summary at [2017-07-09 Sun 17:12]
 | <75>                                                                        |         |       |      |       |
 | Headline                                                                    | Time    |       |      |     % |
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
-| *Total time*                                                                | *21:02* |       |      | 100.0 |
+| *Total time*                                                                | *21:32* |       |      | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
-| Stories                                                                     | 21:02   |       |      | 100.0 |
-| Active                                                                      |         | 21:02 |      | 100.0 |
-| STARTED Sprint and product backlog grooming                                 |         |       | 0:48 |   3.8 |
+| Stories                                                                     | 21:32   |       |      | 100.0 |
+| Active                                                                      |         | 21:32 |      | 100.0 |
+| STARTED Sprint and product backlog grooming                                 |         |       | 0:48 |   3.7 |
 | COMPLETED Edit release notes for previous sprint                            |         |       | 0:24 |   1.9 |
-| COMPLETED Implement the context class                                       |         |       | 1:12 |   5.7 |
-| COMPLETED Implement the exogenous transformation chain                      |         |       | 4:11 |  19.9 |
-| COMPLETED Implement the pre-processing chain                                |         |       | 1:35 |   7.5 |
-| COMPLETED Refactor mapping repository factory                               |         |       | 0:12 |   1.0 |
+| COMPLETED Implement the context class                                       |         |       | 1:12 |   5.6 |
+| COMPLETED Implement the exogenous transformation chain                      |         |       | 4:11 |  19.4 |
+| COMPLETED Implement the pre-processing chain                                |         |       | 1:35 |   7.4 |
+| COMPLETED Refactor mapping repository factory                               |         |       | 0:12 |   0.9 |
 | COMPLETED Implement the output languages transform                          |         |       | 0:37 |   2.9 |
-| COMPLETED Use forward declaration for context                               |         |       | 0:20 |   1.6 |
-| COMPLETED Implement the references chain                                    |         |       | 2:43 |  12.9 |
-| COMPLETED Implement the merge transform                                     |         |       | 0:40 |   3.2 |
+| COMPLETED Use forward declaration for context                               |         |       | 0:20 |   1.5 |
+| COMPLETED Implement the references chain                                    |         |       | 2:43 |  12.6 |
+| COMPLETED Implement the merge transform                                     |         |       | 0:40 |   3.1 |
 | COMPLETED Implement the model generation chain                              |         |       | 0:13 |   1.0 |
-| COMPLETED Implement the model assembly chain                                |         |       | 0:50 |   4.0 |
-| COMPLETED Implement the post-processing chain                               |         |       | 3:31 |  16.7 |
-| COMPLETED Move helpers from =transforms= namespace                          |         |       | 0:45 |   3.6 |
+| COMPLETED Implement the model assembly chain                                |         |       | 0:50 |   3.9 |
+| COMPLETED Implement the post-processing chain                               |         |       | 3:31 |  16.3 |
+| COMPLETED Move helpers from =transforms= namespace                          |         |       | 0:45 |   3.5 |
 | COMPLETED Replace expanders with transforms                                 |         |       | 0:03 |   0.2 |
 | COMPLETED Port all expander unit tests to transforms                        |         |       | 0:42 |   3.3 |
-| COMPLETED Remove all legacy classes from yarn                               |         |       | 0:55 |   4.4 |
+| COMPLETED Remove all legacy classes from yarn                               |         |       | 0:55 |   4.3 |
 | COMPLETED Implement the mapper as a transform                               |         |       | 0:46 |   3.6 |
-| STARTED Move helpers from main yarn namespace                               |         |       | 0:35 |   2.8 |
+| STARTED Move helpers from main yarn namespace                               |         |       | 1:05 |   5.0 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -332,6 +332,8 @@ it, and all the associated classes (repository etc) into the
 transforms namespace and clean it up. Name: =map_transform=.
 
 *** STARTED Move helpers from main yarn namespace                     :story:
+    CLOCK: [2017-07-09 Sun 17:10]--[2017-07-09 Sun 17:12] =>  0:02
+    CLOCK: [2017-07-09 Sun 16:41]--[2017-07-09 Sun 17:09] =>  0:28
     CLOCK: [2017-07-09 Sun 16:22]--[2017-07-09 Sun 16:40] =>  0:18
     CLOCK: [2017-07-09 Sun 16:11]--[2017-07-09 Sun 16:21] =>  0:10
     CLOCK: [2017-07-09 Sun 16:03]--[2017-07-09 Sun 16:10] =>  0:07
