--- a/doc/agile/v1/sprint_backlog_02.org
+++ b/doc/agile/v1/sprint_backlog_02.org
@@ -12,35 +12,37 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2017-07-12 Wed 21:13]
+#+CAPTION: Clock summary at [2017-07-12 Wed 22:04]
 | <75>                                                                        |         |       |      |       |
 | Headline                                                                    | Time    |       |      |     % |
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
-| *Total time*                                                                | *31:50* |       |      | 100.0 |
+| *Total time*                                                                | *32:38* |       |      | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
-| Stories                                                                     | 31:50   |       |      | 100.0 |
-| Active                                                                      |         | 31:50 |      | 100.0 |
+| Stories                                                                     | 32:38   |       |      | 100.0 |
+| Active                                                                      |         | 32:38 |      | 100.0 |
 | STARTED Sprint and product backlog grooming                                 |         |       | 0:48 |   2.5 |
-| COMPLETED Edit release notes for previous sprint                            |         |       | 0:24 |   1.3 |
-| COMPLETED Implement the context class                                       |         |       | 1:12 |   3.8 |
-| COMPLETED Implement the exogenous transformation chain                      |         |       | 4:11 |  13.1 |
-| COMPLETED Implement the pre-processing chain                                |         |       | 1:35 |   5.0 |
+| COMPLETED Edit release notes for previous sprint                            |         |       | 0:24 |   1.2 |
+| COMPLETED Implement the context class                                       |         |       | 1:12 |   3.7 |
+| COMPLETED Implement the exogenous transformation chain                      |         |       | 4:11 |  12.8 |
+| COMPLETED Implement the pre-processing chain                                |         |       | 1:35 |   4.9 |
 | COMPLETED Refactor mapping repository factory                               |         |       | 0:12 |   0.6 |
 | COMPLETED Implement the output languages transform                          |         |       | 0:37 |   1.9 |
 | COMPLETED Use forward declaration for context                               |         |       | 0:20 |   1.0 |
-| COMPLETED Implement the references chain                                    |         |       | 2:43 |   8.5 |
-| COMPLETED Implement the merge transform                                     |         |       | 0:40 |   2.1 |
+| COMPLETED Implement the references chain                                    |         |       | 2:43 |   8.3 |
+| COMPLETED Implement the merge transform                                     |         |       | 0:40 |   2.0 |
 | COMPLETED Implement the model generation chain                              |         |       | 0:13 |   0.7 |
 | COMPLETED Implement the model assembly chain                                |         |       | 0:50 |   2.6 |
-| COMPLETED Implement the post-processing chain                               |         |       | 3:31 |  11.0 |
-| COMPLETED Move helpers from =transforms= namespace                          |         |       | 0:45 |   2.4 |
+| COMPLETED Implement the post-processing chain                               |         |       | 3:31 |  10.8 |
+| COMPLETED Move helpers from =transforms= namespace                          |         |       | 0:45 |   2.3 |
 | COMPLETED Replace expanders with transforms                                 |         |       | 0:03 |   0.2 |
-| COMPLETED Port all expander unit tests to transforms                        |         |       | 0:42 |   2.2 |
-| COMPLETED Remove all legacy classes from yarn                               |         |       | 0:55 |   2.9 |
-| COMPLETED Implement the mapper as a transform                               |         |       | 0:46 |   2.4 |
-| COMPLETED Move helpers from main yarn namespace                             |         |       | 1:29 |   4.7 |
-| COMPLETED Move all data types into its own namespace                        |         |       | 9:00 |  28.3 |
+| COMPLETED Port all expander unit tests to transforms                        |         |       | 0:42 |   2.1 |
+| COMPLETED Remove all legacy classes from yarn                               |         |       | 0:55 |   2.8 |
+| COMPLETED Implement the mapper as a transform                               |         |       | 0:46 |   2.3 |
+| COMPLETED Move helpers from main yarn namespace                             |         |       | 1:29 |   4.5 |
+| COMPLETED Move all data types into its own namespace                        |         |       | 9:00 |  27.6 |
 | CANCELLED Move artefacts from formatters into meta-model                    |         |       | 0:54 |   2.8 |
+| CANCELLED Use transformation context in quilt                               |         |       | 0:20 |   1.0 |
+| STARTED Implement the code-generation chain                                 |         |       | 0:28 |   1.4 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -384,7 +386,23 @@ Actually this does not result in a cleaner model: we need artefacts
 even when we do not use yarn: stitcher. Since this is not an obvious
 win, we'll cancel it for now.
 
-*** Implement the code-generation chain                               :story:
+*** CANCELLED Use transformation context in quilt                     :story:
+    CLOSED: [2017-07-12 Wed 21:33]
+    CLOCK: [2017-07-12 Wed 21:24]--[2017-07-12 Wed 21:33] =>  0:09
+    CLOCK: [2017-07-12 Wed 21:13]--[2017-07-12 Wed 21:24] =>  0:11
+
+Tasks:
+
+- add formatters decoration repository and properties factory to
+  context.
+- update kernel interfaces to use the context.
+
+Actually this won't work because we need the root annotation in order
+to generate the decorations property factory. This cannot be done when
+context is being created.
+
+*** STARTED Implement the code-generation chain                       :story:
+    CLOCK: [2017-07-12 Wed 21:34]--[2017-07-12 Wed 22:02] =>  0:28
 
 Tasks:
 
@@ -397,7 +415,7 @@ Tasks:
 - update knitter to use the code generator.
 - delete knit.
 
-*** Assorted problems to look at
+*** Assorted problems to look at                                      :story:
 
 - No flat mode: we need to be able to generate no folders at all.
 - Registrar coming out even when there is no inheritance.
